--- a/index.html
+++ b/index.html
@@ -211,7 +211,65 @@
     </section>
     <h2 id="grid-flow">Flujo de la Grid</h2>
     <a href="#top">🔝</a>
-    <section class="container grid-flow"></section>
+    <section class="container grid-flow">
+      <aticle class="item">
+        <p>Gris Item 1</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 2</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 3</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 4</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 5</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 6</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 7</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 8</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 9</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 10</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 11</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 12</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 13</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 14</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 15</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 16</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 17</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 18</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 19</p>
+      </aticle>
+    </section>
     <h2 id="grid-layer">Grid Items en Capas (superposición)</h2>
     <a href="#top">🔝</a>
     <section class="container grid-layers"></section>
