--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
       <li><a href="#grid-areas">Grid con Áreas</a></li>
       <li><a href="#grid-implicit">Grid Implícita</a></li>
       <li><a href="#grid-flow">Flujo de la Grid</a></li>
+      <li><a href="#grid-flow-dense">Flujo denso de la Grid</a></li>
       <li><a href="#grid-layer">Grid Items en Capas (superposición)</a></li>
       <li><a href="#grid-order">Ordenamiento de Grid Items</a></li>
       <li><a href="#grid-align">Alineamiento de Grid Items</a></li>
       <li><a href="#grid-align-tracks">Alineamiento de Grid Tracks</a></li>
-      <li>
-        <a href="#grid-min-max">Tamaños Máximos y Mínimos de Grid Tracks</a>
-      </li>
+      <li><a href="#grid-min-max">Tamaños Máximos y Mínimos de Grid Tracks</a></li>
       <li><a href="#grid-repeat">Grid con Patrones Repetitivos</a></li>
       <li><a href="#grid-dynamics">Grids Dinámicas</a></li>
       <li><a href="#grid-responsive">Responsive sin Media Queries</a></li>
@@ -270,9 +269,86 @@
         <p>Gris Item 19</p>
       </aticle>
     </section>
+    <h2 id="grid-flow-dense">Flujo denso de la Grid</h2>
+    <a href="#top">🔝</a>
+    <section class="container grid-flow-dense">
+      <aticle class="item">
+        <p>Gris Item 1</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 2</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 3</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 4</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 5</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 6</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 7</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 8</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 9</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 10</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 11</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 12</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 13</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 14</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 15</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 16</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 17</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 18</p>
+      </aticle>
+      <aticle class="item">
+        <p>Gris Item 19</p>
+      </aticle>
+    </section>
     <h2 id="grid-layer">Grid Items en Capas (superposición)</h2>
     <a href="#top">🔝</a>
-    <section class="container grid-layers"></section>
+    <section class="container grid-layers">
+      <article class="item">
+        <p>Grid item 1</p>
+      </article>
+      <article class="item">
+        <p>Grid item 2</p>
+      </article>
+      <article class="item">
+        <p>Grid item 3</p>
+      </article>
+      <article class="item">
+        <p>Grid item 4</p>
+      </article>
+      <article class="item">
+        <p>Grid item 5</p>
+      </article>
+    </section>
     <h2 id="grid-order">Ordenamiento de Grid Items</h2>
     <a href="#top">🔝</a>
     <section class="container grid-order"></section>
